# DavidsFolly

./: CMakeLists.txt  bg_solver.c  bg_solver.h  bg_solver_2.c  bg_solver_2.h  data_input  get_ho.c  get_ho.h  get_integral.c  get_integral.h  get_pot.c  get_pot.h  get_red_mass.c  get_red_mass.h  globals.c  globals.h  main.c  read_write.c  read_write.h
